2005-10-24  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* foundation.gnome.org/Makefile.am:
	* foundation.gnome.org/vote/*: add anonymous voting scripts

2005-10-20  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/index.wml:
	* foundation.gnome.org/news/index.wml: add news item for referendum

	* foundation.gnome.org/referenda/2005-10/Makefile.am:
	* foundation.gnome.org/referenda/2005-10/index.wml:
	* foundation.gnome.org/referenda/2005-10/timeline.ics: add ical file

	* foundation.gnome.org/referenda/2005-10/voters.wml: updated

2005-10-18  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* foundation.gnome.org/elections/2005:
	* foundation.gnome.org/elections/Makefile.am:
	* foundation.gnome.org/elections/index.wml:
	* foundation.gnome.org/referenda/2005-10:
	* foundation.gnome.org/referenda/Makefile.am
	* foundation.gnome.org/referenda/index.wml: add stuff for the next
	referendum and the next elections

	* foundation.gnome.org/elections/index.wml:
	* foundation.gnome.org/finance/index.wml:
	* foundation.gnome.org/licensing/guidelines/index.wml:
	* foundation.gnome.org/licensing/usergroup/index.wml: fix HTML

	* foundation.gnome.org/licensing/.cvsignore:
	* foundation.gnome.org/licensing/guidelines/.cvsignore:
	* foundation.gnome.org/licensing/usergroup/.cvsignore: new

	* foundation.gnome.org/elections/2000/rules.wml:
	* foundation.gnome.org/elections/2001/rules.wml:
	* foundation.gnome.org/elections/2002/rules.wml:
	* foundation.gnome.org/elections/2003/rules.wml:
	* foundation.gnome.org/elections/2004/index.wml: add missing link to
	the charter

2005-10-17  Murray Cumming <murrayc@murrayc.com>

	* foundation.gnome.org/licensing/guidelines/index.wml: Changed some 
	[] bits to links to the logo page in the wiki, though we do not have 
	a privacy policy to link to.
	* foundation.gnome.org/licensing/usergroup/index.wml: Used regular 
	capitalization for the title.

2005-08-18  Owen Taylor  <otaylor@redhat.com>
