@@ -1,13 +1,33 @@
 <?php
 
-require_once ("/home/admin/secret/anonvoting");
+$has_config = FALSE;
+
+$mysql_host = "";
+$mysql_user = "";
+$mysql_password = "";
+$mysql_db = "";
 
 $elections_table = "elections";
-$options_table = "election_options";
+$choices_table = "election_choices";
 $anon_tokens_table = "election_anon_tokens";
-$tokens_table = "election_tokens";
+$tmp_tokens_table = "election_tmp_tokens";
 $votes_table = "election_votes";
-$members_table = "foundation_members";
+$members_table = "foundationmembers";
+
+if (is_readable ("include/localconfig.php")) {
+  /* You can use such a file to have a local config for testing purpose. */
+  include ("include/localconfig.php");
+  $has_config = TRUE;
+}
+
+if (is_readable ("/home/admin/secret/anonvoting")) {
+  include ("/home/admin/secret/anonvoting");
+  $has_config = TRUE;
+}
+
+if (!$has_config) {
+  trigger_error ("No configuration found.");
+}
 
 function elec_sql_open () {
   global $mysql_host;
@@ -15,18 +35,18 @@ function elec_sql_open () {
   global $mysql_password;
   global $mysql_db;
 
-    $handle = mysql_connect ("$mysql_host", "$mysql_user", "$mysql_password");
-    if (!$handle) {
-      return FALSE;
-    }
+  $handle = mysql_connect ("$mysql_host", "$mysql_user", "$mysql_password");
+  if (!$handle) {
+    return FALSE;
+  }
 
-    $select_base = mysql_select_db ($mysql_database, $handle); 
-    if (!$select_base) {
-      elec_sql_close ($handle);
-      return FALSE;
-    }
+  $select_base = mysql_select_db ($mysql_database, $handle); 
+  if (!$select_base) {
+    elec_sql_close ($handle);
+    return FALSE;
+  }
 
-    return $handle;
+  return $handle;
 }
 
 function elec_sql_close ($handle) {
@@ -102,8 +122,8 @@ function elec_get_previous_by_date_desc ($handle) {
   return elec_get_by_date_desc_with_where ($handle, $where);
 }
 
-function elec_verify_email_token ($handle, $election_id, $email, $token) {
-  global $tokens_table;
+function elec_verify_email_tmp_token ($handle, $election_id, $email, $tmp_token) {
+  global $tmp_tokens_table;
   global $members_table;
 
   if ($handle === FALSE)
@@ -111,11 +131,11 @@ function elec_verify_email_token ($handle, $election_id, $email, $token) {
 
   $escaped_election_id = mysql_real_escape_string ($election_id, $handle);
   $escaped_email = mysql_real_escape_string ($email, $handle);
-  $escaped_token = mysql_real_escape_string ($token, $handle);
+  $escaped_tmp_token = mysql_real_escape_string ($tmp_token, $handle);
 
-  $query = "SELECT COUNT(*) FROM " . $tokens_table . " AS tt, " . $members_table . " AS mt";
+  $query = "SELECT COUNT(*) FROM " . $tmp_tokens_table . " AS tt, " . $members_table . " AS mt";
   $query .= " WHERE tt.election_id = '".$escaped_election_id."'";
-  $query .= " AND tt.token = '".$escaped_token."'";
+  $query .= " AND tt.tmp_token = '".$escaped_tmp_token."'";
   $query .= " AND tt.member_id = mt.id";
   $query .= " AND mt.email = '".$escaped_email."'";
 
@@ -126,15 +146,15 @@ function elec_verify_email_token ($handle, $election_id, $email, $token) {
   return (mysql_result ($result, 0, 0) == 1);
 }
 
-function elec_options_get ($handle, $election_id) {
-  global $options_table;
+function elec_choices_get ($handle, $election_id) {
+  global $choices_table;
 
   if ($handle === FALSE)
     return FALSE;
 
   $escaped_election_id = mysql_real_escape_string ($election_id, $handle);
 
-  $query = "SELECT * FROM " . $options_table;
+  $query = "SELECT * FROM " . $choices_table;
   $query .= " WHERE election_id = '".$escaped_election_id."'";
 
   $result = mysql_query ($query, $handle);
@@ -152,14 +172,14 @@ function elec_options_get ($handle, $election_id) {
   return $retval;
 }
 
-function elec_verify_elections ($options_nb, $options) {
-  if ($options_nb === FALSE || $options === FALSE)
+function elec_verify_elections ($choices_nb, $choices) {
+  if ($choices_nb === FALSE || $choices === FALSE)
     return FALSE;
 
-  if ($options_nb < 1)
+  if ($choices_nb < 1)
     return FALSE;
 
-  if (count ($options) < $options_nb || count ($options) <= 1)
+  if (count ($choices) < $choices_nb || count ($choices) <= 1)
     return FALSE;
 
   return TRUE;
@@ -201,25 +221,25 @@ function elec_election_get_type ($election) {
     return "election";
 }
 
-function elec_vote_get_votes_from_post ($options) {
+function elec_vote_get_votes_from_post ($choices) {
   $votes_array = array ();
 
-  foreach ($options as $option) {
-    $name = "vote".$option["id"];
+  foreach ($choices as $choice) {
+    $name = "vote".$choice["id"];
     if (isset ($_POST[$name]) && $_POST[$name] != "") {
-      array_push ($votes_array, $option["id"]);
+      array_push ($votes_array, $choice["id"]);
     }
   }
 
   return $votes_array;
 }
 
-function elec_verify_vote_is_valid ($options_nb, $options, $vote, $votes_array) {
-  if ($options_nb == 1)
+function elec_verify_vote_is_valid ($choices_nb, $choices, $vote, $votes_array) {
+  if ($choices_nb == 1)
     return "";
 
-  if (count ($votes_array) > $options_nb) {
-    return "you chose ".count ($votes_array)." answers, while you can't choose more than ".$options_nb." answers.";
+  if (count ($votes_array) > $choices_nb) {
+    return "you chose ".count ($votes_array)." answers, while you can't choose more than ".$choices_nb." answers.";
   }
   
   return "";
@@ -263,7 +283,7 @@ function elec_insert_new_vote ($handle, $anon_token_id, $vote) {
   $escaped_vote = mysql_real_escape_string ($vote, $handle);
   $escaped_anon_token_id = mysql_real_escape_string ($anon_token_id, $handle);
 
-  $query = "INSERT INTO " . $votes_table . " (option_id, anon_id)";
+  $query = "INSERT INTO " . $votes_table . " (choice_id, anon_id)";
   $query .= " VALUES ('".$escaped_vote."', '".$escaped_anon_token_id."')";
 
   $result = mysql_query ($query, $handle);
@@ -273,21 +293,21 @@ function elec_insert_new_vote ($handle, $anon_token_id, $vote) {
   return TRUE;
 }
 
-function elec_sql_remove_token ($handle, $election_id, $email, $token) {
+function elec_sql_remove_tmp_token ($handle, $election_id, $email, $tmp_token) {
   global $members_table;
-  global $tokens_table;
+  global $tmp_tokens_table;
 
   if ($handle === FALSE)
     return FALSE;
 
   $escaped_election_id = mysql_real_escape_string ($election_id, $handle);
   $escaped_email = mysql_real_escape_string ($email, $handle);
-  $escaped_token = mysql_real_escape_string ($token, $handle);
+  $escaped_tmp_token = mysql_real_escape_string ($tmp_token, $handle);
 
-  $query = "DELETE FROM " . $tokens_table;
-  $query .= " USING ". $tokens_table . " AS tt, " . $members_table . " AS mt";
+  $query = "DELETE FROM " . $tmp_tokens_table;
+  $query .= " USING ". $tmp_tokens_table . " AS tt, " . $members_table . " AS mt";
   $query .= " WHERE tt.election_id = '".$escaped_election_id."'";
-  $query .= " AND tt.token = '".$escaped_token."'";
+  $query .= " AND tt.tmp_token = '".$escaped_tmp_token."'";
   $query .= " AND tt.member_id = mt.id";
   $query .= " AND mt.email = '".$escaped_email."'";
 
@@ -334,11 +354,11 @@ function elec_get_results_election ($handle, $election_id) {
 
   $escaped_election_id = mysql_real_escape_string ($election_id, $handle);
 
-  $query = "SELECT option_id, COUNT(option_id) AS total_option FROM " . $anon_tokens_table . " AS att, " . $votes_table . " AS vt";
+  $query = "SELECT choice_id, COUNT(choice_id) AS total_choice FROM " . $anon_tokens_table . " AS att, " . $votes_table . " AS vt";
   $query .= " WHERE att.election_id = '".$escaped_election_id."'";
   $query .= " AND att.id = vt.anon_id";
-  $query .= " GROUP BY option_id";
-  $query .= " ORDER BY total_option DESC";
+  $query .= " GROUP BY choice_id";
+  $query .= " ORDER BY total_choice DESC";
 
   $result = mysql_query ($query, $handle);
 
@@ -363,9 +383,9 @@ function elec_get_votes_for_anon_token ($handle, $anon_token_id) {
 
   $escaped_anon_token_id = mysql_real_escape_string ($anon_token_id, $handle);
 
-  $query = "SELECT option_id FROM " . $votes_table;
+  $query = "SELECT choice_id FROM " . $votes_table;
   $query .= " WHERE anon_id = '".$escaped_anon_token_id."'";
-  $query .= " ORDER BY option_id";
+  $query .= " ORDER BY choice_id";
 
   $result = mysql_query ($query, $handle);
 
@@ -374,7 +394,7 @@ function elec_get_votes_for_anon_token ($handle, $anon_token_id) {
   } else {
     $result_array = array ();
     while ($buffer = mysql_fetch_assoc ($result)) {
-      $result_array[] = $buffer["option_id"];
+      $result_array[] = $buffer["choice_id"];
     }
     $retval = $result_array;
   }
