@@ -2,7 +2,7 @@
 
 function step1_do () {
   global $email;
-  global $token;
+  global $tmp_token;
 
   $result = "<h2>Step 1/4 - Login</h2>\n";
 
@@ -10,7 +10,7 @@ function step1_do () {
 
   $result .= "<div class=\"votedata\">\n";
   $result .= "<p><label for=\"email\">E-mail: </label><input type=\"text\" name=\"email\" value=\"".htmlspecialchars ($email)."\" /></p>\n";
-  $result .= "<p><label for=\"token\">Vote token: </label><input type=\"text\" name=\"token\" value=\"".htmlspecialchars ($token)."\" /></p>\n";
+  $result .= "<p><label for=\"tmp_token\">Vote token: </label><input type=\"text\" name=\"tmp_token\" value=\"".htmlspecialchars ($tmp_token)."\" /></p>\n";
   $result .= "</div>\n";
 
   return $result;
