@@ -61,8 +61,8 @@ if ($display) {
 }
 
 if ($display) {
-  $options = elec_options_get ($handle, $election_id);
-  if ($options === FALSE) {
+  $choices = elec_choices_get ($handle, $election_id);
+  if ($choices === FALSE) {
     $error .= "The ".elec_election_get_type ($election)." is not properly set up.\n";
     $display = FALSE;
   }
@@ -81,26 +81,26 @@ if ($display) {
   echo "<div class=\"votedata\">\n";
   foreach ($results as $result) {
     $found = FALSE;
-    foreach ($options as $option) {
-      if ($option["id"] == $result["option_id"]) {
-        echo "<em>".$option["option"]."</em> (<strong>".$result["total_option"]."</strong> votes)<br />\n";
-        $automatic_results[] = $option["option"];
+    foreach ($choices as $choice) {
+      if ($choice["id"] == $result["choice_id"]) {
+        echo "<em>".$choice["choice"]."</em> (<strong>".$result["total_choice"]."</strong> votes)<br />\n";
+        $automatic_results[] = $choice["choice"];
         $found = TRUE;
         break;
       }
     }
 
     if (!$found) {
-      echo "<em>Unknown value (".$result["option_id"].")</em> (<strong>".$result["total_option"]."</strong> votes)<br />\n";
-      $automatic_results[] = "Unknown value (".$result["option_id"].")";
-      $error .= "There was an unkown vote: ".$result["option_id"]."<br />\n";
+      echo "<em>Unknown value (".$result["choice_id"].")</em> (<strong>".$result["total_choice"]."</strong> votes)<br />\n";
+      $automatic_results[] = "Unknown value (".$result["choice_id"].")";
+      $error .= "There was an unkown vote: ".$result["choice_id"]."<br />\n";
     }
   }
   echo "</div>\n";
 
   echo "<p>The automatic result of this ".elec_election_get_type ($election)." is thus:</p>\n";
   echo "<div class=\"votedata\">\n";
-  for ($i = 0; $i < $election["options_nb"]; $i++) {
+  for ($i = 0; $i < $election["choices_nb"]; $i++) {
     echo "<em>".$automatic_results[$i]."</em><br />\n";
   }
   echo "</div>\n";
